added some run parameter tables and details about time step sizes

--- a/doc/dissertation/chapter3.tex
+++ b/doc/dissertation/chapter3.tex
@@ -35,6 +35,8 @@
 %===============================================================================
 \section{The Shallow Water Equations\label{sec:shallow_water_results}}
 %===============================================================================
+\subsection{Overview}
+  \input{content/results/shallowwater/overview}
 \subsection{1-D Dam Break\label{sec:dam_break_1d}}
   \input{content/results/shallowwater/dam_break_1d/description}
 \subsection{Bathtub Test Problem\label{sec:bathtub}}
