--- a/doc/dissertation/content/fct/antidiffusion_bounds_signs.tex
+++ b/doc/dissertation/content/fct/antidiffusion_bounds_signs.tex
@@ -307,6 +307,6 @@ and then perform the following operation:
   \eqp
 \end{equation}
 \end{subequations}
-%This operation potentially gives tighter bounds than the operation of Equation
-%\eqref{eq:solution_bounds_operation}.
+Unless otherwise noted, all of the FCT results in this dissertation
+employ this operation.
 
