--- a/doc/dissertation/content/newcommands.tex
+++ b/doc/dissertation/content/newcommands.tex
@@ -453,7 +453,7 @@
 % invariant domains
 \newcommand{\invariantset}{A}
 \newcommand{\admissibleset}{\mathcal{A}}
-\newcommand{\discreteprocess}{S}
+\newcommand{\discreteprocess}{R}
 \newcommand{\convexcoefficient}{a}
 \newcommand{\convexelement}{\mathbf{b}}
 
