--- a/doc/dissertation/content/results/transport/mms_sinx_ss/description.tex
+++ b/doc/dissertation/content/results/transport/mms_sinx_ss/description.tex
@@ -25,24 +25,33 @@ This problem was run in steady-state to avoid temporal error so that spatial
 convergence rates could accurately be measured.
 The coarsest mesh size in this study uses 8 cells, and each successive mesh
 size is halved, with the finest mesh in the study using 256 cells.
+The run parameters for this test problem are given in Table
+\ref{tab:mms_sinx_ss_run_parameters}.
+
+%-------------------------------------------------------------------------------
+\begin{table}[htb]
+\caption{Convergence Test Problem 1 Run Parameters}
+\label{tab:mms_sinx_ss_run_parameters}
+\centering
+\begin{tabular}{l l}\toprule
+\emph{Parameter} & \emph{Value}\\\midrule
+Number of Cells & $N_{cell} = 8,16,\mathbf{32},64,128,256$\\
+Time Discretization & Steady-State\\\midrule
+Entropy Function & $\entropy(\scalarsolution) = \frac{1}{2}\scalarsolution^2$\\
+Entropy Residual Coefficient & $\entropyresidualcoef = 0.1$\\
+Entropy Jump Coefficient & $\entropyjumpcoef = 0.1$\\\midrule
+FCT Solution Bounds & DMP, Analytic\\
+FCT Initial Guess & $\scalarsolution^{(0)} = \scalarsolution^H$\\
+\bottomrule\end{tabular}
+\end{table}
+%-------------------------------------------------------------------------------
 
 Figure \ref{fig:mms_sinx_ss_solution} shows a comparison of the solutions with
 32 cells, and Figure \ref{fig:mms_sinx_ss_visc} compares the viscosity
 profiles. Only the low-order (DMP) method does not match the exact solution
 well and suffers a defect at the outflow (right) boundary.
 The entropy viscosity and Galerkin FCT methods use the analytic solution bounds
-given by Equation \eqref{eq:analyticDMP_ss} with the antidiffusion bounds fix given by
-Equation \eqref{eq:antidiffusion_bounds_operation}:
-\[
-  \tilde{\antidiffusionbound}_i^-
-    \equiv \min(\antidiffusionbound_i^-, 0)
-  \eqc
-\]
-\[
-  \tilde{\antidiffusionbound}_i^+
-    \equiv \max(\antidiffusionbound_i^+, 0)
-  \eqp
-\]
+given by Equation \eqref{eq:analyticDMP_ss}.
 Since in the steady-state
 case the FCT solution bounds are implicit, the system is nonlinear and requires
 iteration. To produce the results that follow, the high-order solution was
