--- a/doc/dissertation/content/results/transport/three_region/description.tex
+++ b/doc/dissertation/content/results/transport/three_region/description.tex
@@ -53,23 +53,26 @@ Exact Solution & $u(\x,t) = u_b + u_q$\\
 \end{table}
 %-------------------------------------------------------------------------------
 
-Figure \ref{fig:three_region} compares the solutions computed
-for each scheme for this problem, and
-Table \ref{tab:three_region_run_parameters} shows the run parameters used.
+Table \ref{tab:three_region_run_parameters} shows the run parameters used,
+and Figure \ref{fig:three_region} compares the solutions computed
+for each scheme for this problem. The FCT solution lacks the spurious
+oscillations shown in the EV and Galerkin solutions, but is not so diffusive
+as the low-order solution.
+
 %-------------------------------------------------------------------------------
 \begin{table}[ht]\caption{Three-Region Test Problem Run Parameters}
 \label{tab:three_region_run_parameters}
 \centering
 \begin{tabular}{l l}\toprule
 \emph{Parameter} & \emph{Value}\\\midrule
-Number of Cells & $N_{cell} = 2^5 = 32$\\
+Number of Cells & $N_{cell} = 32$\\
+Time Discretization & SSPRK33\\
 End Time & $t = 1$\\
-CFL Number & $\nu = 0.5$\\
-Time Integrator & SSPRK33\\\midrule
-Entropy Function & $E(u) = \frac{1}{2}u^2$\\
-Entropy Residual Coefficient & $c_E = 0.1$\\
-Entropy Jump Coefficient & $c_J = 0.1$\\
-Entropy Time Integrator & BE\\
+CFL Number & $\nu = 0.5$\\\midrule
+Entropy Function & $\entropy(u) = \frac{1}{2}u^2$\\
+Entropy Residual Coefficient & $\entropyresidualcoef = 0.1$\\
+Entropy Jump Coefficient & $\entropyjumpcoef = 0.1$\\\midrule
+FCT Solution Bounds & Analytic\\
 \bottomrule\end{tabular}
 \end{table}
 %-------------------------------------------------------------------------------
@@ -77,7 +80,7 @@ Entropy Time Integrator & BE\\
    \centering
    \includegraphics[width=0.9\textwidth]
      {\contentdir/results/transport/three_region/three_region.pdf}
-   \caption{Comparison of Solutions for the 3-Region Test Problem}
+   \caption{Comparison of Solutions for the 3-Region Test Problem Using SSPRK33 with 32 Cells}
    \label{fig:three_region}
 \end{figure}
 %-------------------------------------------------------------------------------
