--- a/doc/dissertation/content/results/transport/void_to_absorber/description.tex
+++ b/doc/dissertation/content/results/transport/void_to_absorber/description.tex
@@ -86,11 +86,13 @@ that the FCT algorithm used is not restricted to 1-D or 2-D.
 \begin{tabular}{l l}\toprule
 \emph{Parameter} & \emph{Value}\\\midrule
 Number of Cells & $N_{cell} = 16384$\\
+Time Discretization & Explicit Euler, SSPRK33\\
 End Time & $t = 1$\\
 CFL Number & $\nu = 0.5$\\\midrule
 Entropy Function & $\entropy(\scalarsolution) = \frac{1}{2}\scalarsolution^2$\\
 Entropy Residual Coefficient & $\entropyresidualcoef = 0.1$\\
-Entropy Jump Coefficient & $\entropyjumpcoef = 0.1$\\
+Entropy Jump Coefficient & $\entropyjumpcoef = 0.1$\\\midrule
+FCT Solution Bounds & DMP\\
 \bottomrule\end{tabular}
 \end{table}
 %-------------------------------------------------------------------------------
