--- a/doc/dissertation/chapter3.tex
+++ b/doc/dissertation/chapter3.tex
@@ -18,6 +18,8 @@
     \input{content/results/transport/absorber_ss/description}
   %\subsubsection{Convergence Study 3\label{sec:mms_sinx_expt}}
   %  \input{content/results/transport/mms_sinx_expt/description}
+\subsection{Multi-Region Test Problem\label{sec:multi_region}}
+  \input{content/results/transport/multi_region/description}
 \subsection{Void-to-Absorber Test Problem\label{sec:void_to_absorber}}
   \input{content/results/transport/void_to_absorber/description}
 \subsection{Skew Void-to-Absorber Test Problem\label{sec:skew_void_to_absorber}}
@@ -28,8 +30,8 @@
   \input{content/results/transport/obstruction/description}
 \subsection{Source Void-to-Absorber Test Problem\label{sec:source_void_to_absorber}}
   \input{content/results/transport/source_void_to_absorber/description}
-\subsection{Multi-Region Test Problem\label{sec:multi_region}}
-  \input{content/results/transport/multi_region/description}
+\subsection{Source-in-Absorber Test Problem\label{sec:source_in_absorber}}
+  \input{content/results/transport/source_in_absorber/description}
 \subsection{Three-Region Test Problem\label{sec:three_region}}
   \input{content/results/transport/three_region/description}
 %===============================================================================
